--- a/contact-me.html
+++ b/contact-me.html
@@ -17,9 +17,9 @@
 
     <form action="mailto:pelda.bela@gmail.com" method="POST" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" value="yourName" /><br />
+      <input type="text" placeholder="Your Name" /><br />
       <label>Your E-mail:</label>
-      <input type="email" value="yourEmail" /><br />
+      <input type="email" placeholder="Your Email" /><br />
       <label>Your Message:</label><br />
       <textarea cols="30" rows="10" value="yourMessage"></textarea><br />
       <input type="submit" />
